please accept flask olympics plz

--- a/Apatira_Authman/Assignments/flaskolympics/olympics5/templates/index.html
+++ b/Apatira_Authman/Assignments/flaskolympics/olympics5/templates/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
 
-    <form class="" action="/process/peaches" method="post">
+    <form class="" action="/process/apples" method="post">
       <input type="submit" value="Submit">
     </form>
     
